// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/drafts/drafts_row > should match snapshot for channel draft 1`] = `
<div>
  <div
    aria-label="draft in name"
    class="Panel draftError"
    data-testid="draftView"
    role="link"
    tabindex="0"
  >
    <div
      class="PanelHeader"
    >
      <div
        class="PanelHeader__left"
      >
        In: 
        <i
          class="icon icon-globe"
        />
         
        <span>
          name
        </span>
      </div>
      <div
        class="PanelHeader__right"
      >
        <div
          class="PanelHeader__actions"
        >
          <div
            class="DraftAction"
          >
            <button
              aria-labelledby="draft_tooltip_delete"
              class="DraftAction__button DraftAction__button--delete"
              id="draft_icon-trash-can-outline_delete"
            >
              <i
                class="icon icon-trash-can-outline"
              />
            </button>
          </div>
        </div>
        <div
          class="PanelHeader__info"
        >
          <div
            class="PanelHeader__timestamp"
          />
          <div
            class="sc-dkjJMV gJatBu Tag Tag--danger Tag--xs"
          >
            <svg
              fill="currentColor"
              height="10"
              version="1.1"
              viewBox="0 0 24 24"
              width="10"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21.638,16.575L14.64,3.578C14.117,2.605,13.105,2,12,2S9.883,2.605,9.359,3.578L2.362,16.575c-0.505,0.939-0.481,2.046,0.065,2.962C2.974,20.453,3.937,21,5.003,21h13.994c1.066,0,2.029-0.547,2.575-1.463
	C22.119,18.622,22.143,17.514,21.638,16.575z M18.995,18.998H5.001c-0.757,0-1.239-0.808-0.88-1.475l6.997-12.997
	C11.307,4.175,11.652,4,11.998,4s0.691,0.175,0.88,0.526l6.997,12.997C20.234,18.19,19.752,18.998,18.995,18.998z M12.5,13h-1L11,7
	h2L12.5,13z M12.999,16c0,0.552-0.448,1-1,1s-1-0.448-1-1s0.448-1,1-1C12.552,15,12.999,15.448,12.999,16z"
              />
            </svg>
            <span
              class="sc-hLcnCW exucir"
            >
              Channel is read only
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="DraftPanelBody post"
    >
      <div
        class="DraftPanelBody__left post__img"
      >
        <button
          aria-expanded="false"
          aria-haspopup="dialog"
          class="status-wrapper style--none"
          style="border-radius: 50%; width: 32px; height: 32px;"
        >
          <span
            class="profile-icon "
          >
            <img
              alt="some-user profile image"
              class="Avatar Avatar-md"
              loading="lazy"
              src="/api/v4/users/user_id/image?_=0"
            />
          </span>
          <span
            class="status "
          >
            <svg
              aria-label="Online"
              height="100%"
              role="img"
              style="fill-rule: evenodd; clip-rule: evenodd; stroke-linejoin: round; stroke-miterlimit: 1.41421;"
              viewBox="0 0 20 20"
              width="100%"
            >
              <path
                class="online--icon"
                d="M10,0c5.519,0 10,4.481 10,10c0,5.519 -4.481,10 -10,10c-5.519,0 -10,-4.481 -10,-10c0,-5.519 4.481,-10 10,-10Zm6.19,7.18c0,0.208 -0.075,0.384 -0.224,0.53l-5.782,5.64l-1.087,1.059c-0.149,0.146 -0.33,0.218 -0.543,0.218c-0.213,0 -0.394,-0.072 -0.543,-0.218l-1.086,-1.059l-2.891,-2.82c-0.149,-0.146 -0.224,-0.322 -0.224,-0.53c0,-0.208 0.075,-0.384 0.224,-0.53l1.086,-1.059c0.149,-0.146 0.33,-0.218 0.543,-0.218c0.213,0 0.394,0.072 0.543,0.218l2.348,2.298l5.24,-5.118c0.149,-0.146 0.33,-0.218 0.543,-0.218c0.213,0 0.394,0.072 0.543,0.218l1.086,1.059c0.149,0.146 0.224,0.322 0.224,0.53Z"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="DraftPanelBody__post_body"
      >
        <div
          class="post-message post-message--collapsed"
        >
          <div
            class="post-message__text-container"
            style="max-height: 600px;"
          >
            <div
              class="post__content"
            >
              <div
                class="DraftPanelBody__right"
              >
                <div
                  class="post__header"
                >
                  <strong>
                    test
                  </strong>
                </div>
                <div
                  class="post__body"
                >
                  <p>
                    test message
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/drafts/drafts_row > should match snapshot for thread draft 1`] = `
<div>
  <div
    aria-label="draft in name"
    class="Panel draftError"
    data-testid="draftView"
    role="link"
    tabindex="0"
  >
    <div
      class="PanelHeader"
    >
      <div
        class="PanelHeader__left"
      >
        Thread in: 
        <i
          class="icon icon-globe"
        />
         
        <span>
          name
        </span>
      </div>
      <div
        class="PanelHeader__right"
      >
        <div
          class="PanelHeader__actions"
        >
          <div
            class="DraftAction"
          >
            <button
              aria-labelledby="draft_tooltip_delete"
              class="DraftAction__button DraftAction__button--delete"
              id="draft_icon-trash-can-outline_delete"
            >
              <i
                class="icon icon-trash-can-outline"
              />
            </button>
          </div>
        </div>
        <div
          class="PanelHeader__info"
        >
          <div
            class="PanelHeader__timestamp"
          />
          <div
            class="sc-dkjJMV gJatBu Tag Tag--danger Tag--xs"
          >
            <svg
              fill="currentColor"
              height="10"
              version="1.1"
              viewBox="0 0 24 24"
              width="10"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21.638,16.575L14.64,3.578C14.117,2.605,13.105,2,12,2S9.883,2.605,9.359,3.578L2.362,16.575c-0.505,0.939-0.481,2.046,0.065,2.962C2.974,20.453,3.937,21,5.003,21h13.994c1.066,0,2.029-0.547,2.575-1.463
	C22.119,18.622,22.143,17.514,21.638,16.575z M18.995,18.998H5.001c-0.757,0-1.239-0.808-0.88-1.475l6.997-12.997
	C11.307,4.175,11.652,4,11.998,4s0.691,0.175,0.88,0.526l6.997,12.997C20.234,18.19,19.752,18.998,18.995,18.998z M12.5,13h-1L11,7
	h2L12.5,13z M12.999,16c0,0.552-0.448,1-1,1s-1-0.448-1-1s0.448-1,1-1C12.552,15,12.999,15.448,12.999,16z"
              />
            </svg>
            <span
              class="sc-hLcnCW exucir"
            >
              Thread not found
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="DraftPanelBody post"
    >
      <div
        class="DraftPanelBody__left post__img"
      >
        <button
          aria-expanded="false"
          aria-haspopup="dialog"
          class="status-wrapper style--none"
          style="border-radius: 50%; width: 32px; height: 32px;"
        >
          <span
            class="profile-icon "
          >
            <img
              alt="some-user profile image"
              class="Avatar Avatar-md"
              loading="lazy"
              src="/api/v4/users/user_id/image?_=0"
            />
          </span>
          <span
            class="status "
          >
            <svg
              aria-label="Online"
              height="100%"
              role="img"
              style="fill-rule: evenodd; clip-rule: evenodd; stroke-linejoin: round; stroke-miterlimit: 1.41421;"
              viewBox="0 0 20 20"
              width="100%"
            >
              <path
                class="online--icon"
                d="M10,0c5.519,0 10,4.481 10,10c0,5.519 -4.481,10 -10,10c-5.519,0 -10,-4.481 -10,-10c0,-5.519 4.481,-10 10,-10Zm6.19,7.18c0,0.208 -0.075,0.384 -0.224,0.53l-5.782,5.64l-1.087,1.059c-0.149,0.146 -0.33,0.218 -0.543,0.218c-0.213,0 -0.394,-0.072 -0.543,-0.218l-1.086,-1.059l-2.891,-2.82c-0.149,-0.146 -0.224,-0.322 -0.224,-0.53c0,-0.208 0.075,-0.384 0.224,-0.53l1.086,-1.059c0.149,-0.146 0.33,-0.218 0.543,-0.218c0.213,0 0.394,0.072 0.543,0.218l2.348,2.298l5.24,-5.118c0.149,-0.146 0.33,-0.218 0.543,-0.218c0.213,0 0.394,0.072 0.543,0.218l1.086,1.059c0.149,0.146 0.224,0.322 0.224,0.53Z"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="DraftPanelBody__post_body"
      >
        <div
          class="post-message post-message--collapsed"
        >
          <div
            class="post-message__text-container"
            style="max-height: 600px;"
          >
            <div
              class="post__content"
            >
              <div
                class="DraftPanelBody__right"
              >
                <div
                  class="post__header"
                >
                  <strong>
                    test
                  </strong>
                </div>
                <div
                  class="post__body"
                >
                  <p>
                    test message
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
